force-app/main/default/objects/DocuSignWebhookEvent__c/DocuSignWebhookEvent__c.object-meta.xml
<CustomObject>
    <description>Historique des evenements recus depuis DocuSign Connect.</description>
    <label>DocuSign Webhook Event</label>
    <nameField>
        <displayFormat>DSW-{000000}</displayFormat>
        <label>DocuSign Webhook Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Webhook Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>