force-app/main/default/objects/DocuSignWebhookEvent__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envelope</label>
    <referenceTo>DocuSign_Envelope__c</referenceTo>
    <relationshipLabel>Webhook Events</relationshipLabel>
    <relationshipName>Webhook_Events</relationshipName>
    <type>Lookup</type>
</CustomField>