force-app/main/default/objects/DocuSignWebhookEvent__c/fields/Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Id__c</fullName>
    <label>Envelope Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>