force-app/main/default/objects/DocuSignWebhookEvent__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DocuSign Webhook Events</relationshipLabel>
    <relationshipName>DocuSign_Webhook_Events</relationshipName>
    <type>Lookup</type>
</CustomField>