force-app/main/default/objects/DocuSignWebhookEvent__c/fields/Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error__c</fullName>
    <label>Processing Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>