force-app/main/default/objects/DocuSignWebhookEvent__c/fields/Signature_Valid__c.field-meta.xml
<CustomField>
    <fullName>Signature_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Valid</label>
    <type>Checkbox</type>
</CustomField>